tests/fixtures/invalid/bytes_lt_bool.py
# Cannot compare with < Bytes and Bool
x: bool = b"hello" < True
